Reordering FCurves can cause crash or corruption #89435

Closed
opened 2021-06-25 17:32:57 +02:00 by Frankie Hobbins · 17 comments

System Information
Operating system: Win10
Graphics card: 2080ti

Blender Version
Broken: 2.93
Worked: Never (2.80+)

Short description of error
When moving f curves up and down (changing order) in the dopesheet it can cause an instant crash.

I have recorded a video and attached the blend file. I think it works ok in simple rigs/objects.
SyQtuJ3RwV.mp4

Exact steps for others to reproduce the error

#89435-move-fcurves-crash-mine.blend
Open the above file and try to move a channel (with page up/down keys) to the edge of a channel group. Things will go wrong and channels will disappear.

To reproduce from scratch:

  • Start Blender with the default scene
  • Create a keyframe for the location of the cube
  • Rename the "Object Transforms" channel group to "Other Group" -- name is irrelevant, as long as it's been changed
  • Create a keyframe for the rotation of the cube
  • You now have two groups with three animation channels each.
  • Move a channel in the first group towards the second group, and see how things misbehave.

Original steps to reproduce:

#89435.blend

  • Open file
  • In Action Editor click on menu > Channel > Move > Up

Crashes on NULL dereference - group_fcurves_last was NULL

**System Information** Operating system: Win10 Graphics card: 2080ti **Blender Version** Broken: 2.93 Worked: Never (2.80+) **Short description of error** When moving f curves up and down (changing order) in the dopesheet it can cause an instant crash. I have recorded a video and attached the blend file. I think it works ok in simple rigs/objects. [SyQtuJ3RwV.mp4](https://archive.blender.org/developer/F10202267/SyQtuJ3RwV.mp4) **Exact steps for others to reproduce the error** [#89435-move-fcurves-crash-mine.blend](https://archive.blender.org/developer/F10205801/T89435-move-fcurves-crash-mine.blend) Open the above file and try to move a channel (with page up/down keys) to the edge of a channel group. Things will go wrong and channels will disappear. To reproduce from scratch: - Start Blender with the default scene - Create a keyframe for the location of the cube - Rename the "Object Transforms" channel group to "Other Group" -- name is irrelevant, as long as it's been changed - Create a keyframe for the rotation of the cube - You now have two groups with three animation channels each. - Move a channel in the first group towards the second group, and see how things misbehave. **Original steps to reproduce:** [#89435.blend](https://archive.blender.org/developer/F10204667/T89435.blend) - Open file - In Action Editor click on menu > Channel > Move > Up Crashes on NULL dereference - `group_fcurves_last` was NULL

Added subscriber: @FrankieHobbins

Added subscriber: @FrankieHobbins

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Please click on Help > Save System Info and upload saved file.

This is functionality provided by addon, do you know which addon it is?

Please click on Help > Save System Info and upload saved file. This is functionality provided by addon, do you know which addon it is?

Here is the system info, system-info.txt

are you sure its an addon? I just checked on a clean install and have the options there.

Here is the system info, [system-info.txt](https://archive.blender.org/developer/F10202436/system-info.txt) are you sure its an addon? I just checked on a clean install and have the options there.

here's a link to the blender docs with the command in https://docs.blender.org/api/2.93/bpy.ops.anim.html#bpy.ops.anim.channels_move

here's a link to the blender docs with the command in https://docs.blender.org/api/2.93/bpy.ops.anim.html#bpy.ops.anim.channels_move

In #89435#1182854, @FrankieHobbins wrote:
are you sure its an addon? I just checked on a clean install and have the options there.

Sorry I got myself confused, You are correct, this is builtin functionality. I have re-checked this and can't reproduce this bug with file created from scratch. Can you please provide sample .blend file?

On the other hand if you look at the end of provided system-info.txt file you can see that you have quite a few addons enabled which may cause problems like this. So please check if this happens when you click on File > Defaults > Load Factory Settings, open sample file and redo buggy action.

> In #89435#1182854, @FrankieHobbins wrote: > are you sure its an addon? I just checked on a clean install and have the options there. Sorry I got myself confused, You are correct, this is builtin functionality. I have re-checked this and can't reproduce this bug with file created from scratch. Can you please provide sample .blend file? On the other hand if you look at the end of provided `system-info.txt` file you can see that you have quite a few addons enabled which may cause problems like this. So please check if this happens when you click on File > Defaults > Load Factory Settings, open sample file and redo buggy action.

oh no! I forgot to attach the blend file in the initial report. Sorry about that
Here it is; Moving F curves up and down in the dope sheet can cause blender to crash immediately.blend

If I do load factory settings will it override all my pre-sets forever?

oh no! I forgot to attach the blend file in the initial report. Sorry about that Here it is; [Moving F curves up and down in the dope sheet can cause blender to crash immediately.blend](https://archive.blender.org/developer/F10204653/Moving_F_curves_up_and_down_in_the_dope_sheet_can_cause_blender_to_crash_immediately.blend) If I do load factory settings will it override all my pre-sets forever?

In #89435#1183783, @FrankieHobbins wrote:
If I do load factory settings will it override all my pre-sets forever?

No, it lasts only for session, so when you restert Blender your saved preferences will be used.

But I can reproduce issue with your file, so no addon is involved here.

> In #89435#1183783, @FrankieHobbins wrote: > If I do load factory settings will it override all my pre-sets forever? No, it lasts only for session, so when you restert Blender your saved preferences will be used. But I can reproduce issue with your file, so no addon is involved here.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Stacktrace:

>	blender.exe!split_groups_action_temp(bAction * act, bActionGroup * tgrp) Line 1275	C

 	blender.exe!rearrange_action_channels(bAnimContext * ac, bAction * act, eRearrangeAnimChan_Mode mode) Line 1380	C
 	blender.exe!animchannels_rearrange_exec(bContext * C, wmOperator * op) Line 1529	C
 	blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1361	C
 	blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line
 1556	C
 	blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1605	C
 	blender.exe!ui_apply_but_funcs_after(bContext * C) Line 959	C
 	blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 11038	C
 	blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 692	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2841	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2957	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3377	C
 	blender.exe!WM_main(bContext * C) Line 650	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562	C
 	[External Code]	
Stacktrace: ``` > blender.exe!split_groups_action_temp(bAction * act, bActionGroup * tgrp) Line 1275 C blender.exe!rearrange_action_channels(bAnimContext * ac, bAction * act, eRearrangeAnimChan_Mode mode) Line 1380 C blender.exe!animchannels_rearrange_exec(bContext * C, wmOperator * op) Line 1529 C blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1361 C blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const bool poll_only, wmEvent * event) Line 1556 C blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) Line 1605 C blender.exe!ui_apply_but_funcs_after(bContext * C) Line 959 C blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 11038 C blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 692 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2841 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2957 C blender.exe!wm_event_do_handlers(bContext * C) Line 3377 C blender.exe!WM_main(bContext * C) Line 650 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562 C [External Code] ```

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

This is probably caused by 8c74c35ecb, as that also introduces issues with a simpler file:

#89435-move-fcurves-crash-mine.blend

This is probably caused by 8c74c35ecb, as that also introduces issues with a simpler file: [#89435-move-fcurves-crash-mine.blend](https://archive.blender.org/developer/F10205801/T89435-move-fcurves-crash-mine.blend)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

@dr.sybren: I think the behavior was present before, but 8c74c35ecb made it so it crashes when moving up/down twice

@dr.sybren: I think the behavior was present before, but 8c74c35ecb made it so it crashes when moving up/down twice
Sybren A. Stüvel self-assigned this 2021-07-05 12:08:05 +02:00
Sybren A. Stüvel changed title from Moving F curves up and down in the dope sheet can cause blender to crash immediately to Reordering FCurves can cause crash or corruption 2021-07-05 15:29:00 +02:00

This issue was referenced by c04cceb40e

This issue was referenced by c04cceb40ed5574dcba8a55cfe97a1132c869895

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89435
No description provided.